fix(app.css): color secondary added, spacing added, padding top for main element is now exactly same as the sub header

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -110,22 +110,21 @@
 
   --accent-color: #964734;
 
-  /* --color-primary: oklch(65.58% 0.1281 77.66);
+  --color-secondary: oklch(70.58% 0.1281 77.66);
 
-  --color-primary-100: oklch(99.58% 0.1281 77.66);
-  --color-primary-200: oklch(85.58% 0.1281 77.66);
-  --color-primary-300: oklch(80.58% 0.1281 77.66);
-  --color-primary-400: oklch(70.58% 0.1281 77.66);
-  --color-primary-500: oklch(65.58% 0.1281 77.66);
-  --color-primary-600: oklch(55.58% 0.1281 77.66);
-  --color-primary-700: oklch(45.58% 0.1281 77.66);
-  --color-primary-800: oklch(35.58% 0.1281 77.66); */
+  --color-secondary-100: oklch(99.58% 0.1281 77.66);
+  --color-secondary-200: oklch(85.58% 0.1281 77.66);
+  --color-secondary-300: oklch(80.58% 0.1281 77.66);
+  --color-secondary-400: var(--color-secondary);
+  --color-secondary-500: oklch(65.58% 0.1281 77.66);
+  --color-secondary-600: oklch(55.58% 0.1281 77.66);
+  --color-secondary-700: oklch(45.58% 0.1281 77.66);
+  --color-secondary-800: oklch(35.58% 0.1281 77.66);
+
+  /* --color-tertiary: #F2C57C; */
 
 
 
-  --color-secondary: oklch(99.58% 0.1097 203.42);
-
-  --color-tertiary: #F2C57C;
 
 
 
@@ -157,6 +156,11 @@
   --spacing-sm: 0.5rem;
   --spacing-md: 1rem;
   --spacing-lg: 1.5rem;
+
+  --gap-xs: var(--spacing-xs);
+  --gap-sm: var(--spacing-sm);
+  --gap-md: var(--spacing-md);
+  --gap-lg: var(--spacing-lg);
 
   --gap: var(--spacing-md);
 
@@ -196,7 +200,7 @@ body {
 
 main {
   &:not(:has(.video-hero)) {
-    padding-top: calc(var(--sub-header-height) + var(--padding-top-main));
+    padding-top: calc(var(--sub-header-height));
     padding-bottom: var(--padding-top-main);
   }
 
